Fix the spacing between nav, content, and footer

--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -1,8 +1,9 @@
 .footer {
   background: $charcoal;
   border-top: 1px dashed $white;
+  bottom: 0;
   min-height: $footer-height;
-  position: relative;
+  position: absolute;
   z-index: 3;
 
   &-separator {
