--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -78,7 +78,7 @@
     background-color: $charcoal;
     color: $light-pink;
     overflow: hidden;
-    padding-top: 2rem;
+    padding-top: 7rem;
     text-shadow: 1px 1px 0px #292c31;
   }
 
